@@ -1,6 +1,7 @@
 0.18
  - Move check_array() to Mo::utils::Array.
  - Remove obsolete code.
+ - Update copyright years.
 
 0.17 2024-05-21T09:35:29+02:00
  - Fix minimal version of Mo::utils.
